--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Registrierung & Verifizierung</title>
+  <title>Zertifizierung & Registrierung</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 </head>
 <body>
   <div class="container">
-    <h2>Registrierung & Verifizierung</h2>
+    <h2 id="main-title">Zertifizierung & Registrierung</h2>
 
     <div id="email-section">
       <input type="email" id="email" placeholder="Deine E-Mail eingeben" required />
       <button id="email-send-btn" onclick="sendVerificationCode()">Weiter</button>
+      <p id="loading-text" style="display:none">⏳ Wird geladen...</p>
     </div>
 
     <div id="code-section" style="display:none">
@@ -22,19 +23,41 @@
     </div>
 
     <div id="about-section" style="display:none">
-      <label for="about">Erzähle ein bisschen über dich (mindestens 500 Wörter):</label>
+      <h2>Erzähle ein bisschen über dich (mindestens 500 Wörter)</h2>
       <textarea id="about" rows="10"></textarea>
-      <div class="info">was sollte im Text vorhanden sein?<br>Alter, Name, Hobbys, etc.</div>
+      <div class="collapsible-container">
+        <button class="collapsible">Was sollte im Text vorhanden sein?</button>
+        <div class="content">
+          <ul>
+            <li>Alter</li>
+            <li>Name</li>
+            <li>Hobbys</li>
+            <li>Persönliche Interessen</li>
+            <li>Dein Tagesablauf</li>
+          </ul>
+        </div>
+      </div>
       <div class="counter" id="counter-about">0/500 Wörter</div>
       <button id="about-btn" onclick="nextSection()" disabled>Weiter</button>
     </div>
 
     <div id="why-section" style="display:none">
-      <label for="why">Warum willst du dem Team beitreten?</label>
+      <h2>Warum willst du dem Team beitreten?</h2>
       <textarea id="why" rows="10"></textarea>
-      <div class="info">was soll vorhanden sein?:<br>Begründung, Lol, Wie du uns gefunden hast</div>
+      <div class="collapsible-container">
+        <button class="collapsible">Was soll vorhanden sein?</button>
+        <div class="content">
+          <ul>
+            <li>Begründung</li>
+            <li>Warum du geeignet bist</li>
+            <li>Wie du uns gefunden hast</li>
+            <li>Was dich an unserem Team begeistert</li>
+            <li>Was du beitragen kannst</li>
+          </ul>
+        </div>
+      </div>
       <div class="counter" id="counter-why">0/500 Wörter</div>
-      <button id="why-btn" onclick="finish()">Weiter</button>
+      <button id="why-btn" onclick="finish()" disabled>Weiter</button>
     </div>
 
     <p id="message"></p>
