--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Zertifizierung & Registrierung</title>
   <link rel="stylesheet" href="style.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <h1 id="form-title">🕹️ Retro Registrierung</h1>
+  <!-- Splash Screen -->
+  <div id="splash">
+    <img src="https://static.vecteezy.com/system/resources/previews/025/463/773/non_2x/hacker-logo-design-a-mysterious-and-dangerous-hacker-illustration-vector.jpg" alt="Logo" class="splash-logo" />
+  </div>
 
-    <div id="step-email" class="step active">
+  <!-- Branding -->
+  <header class="branding">
+    <a href="https://meinewebsite.github.io/main">
+      <img src="https://static.vecteezy.com/system/resources/previews/025/463/773/non_2x/hacker-logo-design-a-mysterious-and-dangerous-hacker-illustration-vector.jpg" alt="Logo" class="logo-small"/>
+      <span class="brand-text">keineahnung</span>
+    </a>
+  </header>
+
+  <!-- Hauptinhalt -->
+  <div class="container">
+    <div id="step-email" class="step">
       <label for="email">E-Mail-Adresse:</label>
       <input type="email" id="email" required placeholder="name@example.com"/>
       <button id="sendCodeBtn">CODE Senden</button>
