--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="step-code" class="step">
       <h2 class="question">Bestätigungscode:</h2>
       <p class="description">Gib den Code ein, den wir dir per E-Mail geschickt haben.</p>
-      <input type="text" id="verificationCode" maxlength="6" placeholder="000000"/>
+      <input type="number" id="verificationCode" maxlength="6" placeholder="000000"/>
       <button id="verifyCodeBtn">Verifizieren</button>
     </div>
 
